# injkt

./: README.md  pyproject.toml
examples/: __main__.py  simple_mail_service.py
injkt/: __init__.py  bind.py  decorator.py  exceptions.py  injectable.py  injkt_lazy.py  injktor.py
tests/: test_bind.py  test_decorators.py  test_injectable.py  test_injkt_lazy.py  test_injktor.py  test_singleton.py
